# terminal_for_fluffy

./: .gitignore  Cargo.toml  LICENSE  README.md  run-admin.ps1  run-client.ps1
fluffy/: Cargo.toml
fluffy-admin/: Cargo.toml
fluffy-admin/src/: app.rs  local_executor.rs  main.rs  net.rs  repl.rs
fluffy-admin/src/ui/: layout.rs  mod.rs
fluffy-admin/src/ui/widgets/: help_overlay.rs  output_panel.rs  status_bar.rs
fluffy-client/: Cargo.toml
fluffy-client/src/: executor.rs  main.rs
fluffy-client/src/handlers/: battery.rs  clipboard.rs  mod.rs  notify.rs  power.rs  processes.rs  screen.rs  sysinfo.rs  transfer.rs  users.rs
fluffy-client/src/platform/: mod.rs
fluffy-ui/: Cargo.toml
fluffy-ui/src/: layout.rs  lib.rs  theme.rs
fluffy-ui/src/widgets/: mod.rs  notification.rs  panel.rs  status.rs  table.rs
fluffy/src/: app.rs  client_manager.rs  main.rs  net.rs  repl.rs
fluffy/src/client_agent/: error.rs  executor.rs  mod.rs
fluffy/src/client_agent/handlers/: battery.rs  clipboard.rs  disk.rs  files.rs  locate.rs  network.rs  notify.rs  power.rs  screen.rs  sysinfo.rs  users.rs
fluffy/src/client_agent/platform/: linux.rs  macos.rs  windows.rs
fluffy/src/ui/: layout.rs  mod.rs
fluffy/src/ui/widgets/: client_list.rs  help_overlay.rs  input_bar.rs  mod.rs  output_panel.rs  status_bar.rs
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
shared/src/: commands.rs  lib.rs  parser.rs  plugin.rs  protocol.rs
