[package]
name = "fluffy-client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.30"
hostname = "0.4"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", features = ["json"] }
