[package]
name = "fluffy"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
fluffy-ui = { path = "../fluffy-ui" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
chrono = { version = "0.4", features = ["clock"] }
sysinfo = "0.30"
hostname = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"
unicode-width = "0.1"
